# autosci

./: .gitignore  CLAUDE.md  README.md  ResearchClawBench_evaluation.md  pyproject.toml  requirements.txt
analysis/: Astronomy_000.md  Astronomy_001.md  Astronomy_002.md  Astronomy_003.md  Chemistry_000.md  Chemistry_001.md  Chemistry_002.md  Chemistry_003.md  Earth_000.md  Earth_001.md  Earth_002.md  Earth_003.md  Energy_000.md  Energy_001.md  Energy_002.md  Energy_003.md  Information_000.md  Information_001.md  Information_002.md  Information_003.md  Life_000.md  Life_001.md  Life_002.md  Life_003.md  Material_000.md  Material_001.md  Material_002.md  Material_003.md  Math_001.md  Math_002.md  Math_003.md  Neuroscience_000.md  Neuroscience_001.md  Neuroscience_002.md  Neuroscience_003.md  Physics_000.md  Physics_001.md  Physics_002.md  Physics_003.md  summary.md
analysis-0505/: astronomy.md  chemistry.md  earth.md  energy.md  information.md  life.md  material_math.md  neuroscience_physics.md  summary.md
autosci/: __init__.py  cli.py  config.py
autosci/agents/: base.py  registry.py
autosci/agents/assistant/: prompt.md  (+1 more)
autosci/modes/: assistant.py  bench.py
autosci/protocols/: schemas.py
autosci/runtime/: error_handler.py  repl.py  runner.py
autosci/skills/: engine.py
autosci/workflow/: __init__.py  schemas.py
docs/: architecture.md  autosci_vs_reference_agents.md  configuration.md  dev_log.md
docs/decisions/: 001-platform-redesign.md
reference_designs/project_reading/: hermes-agent.md
scripts/: run.py
src/autosci/: bench.py  cli.py  scientist.py
(+117 files in other folders)
