[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosci"
version = "0.1.0"
description = "An agent framework for end-to-end scientific research tasks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
search = ["duckduckgo-search>=4.0"]

[project.scripts]
autosci = "autosci.cli:main"
autosci-bench = "autosci.modes.bench:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
autosci = [
    "skills/builtin/*.md",
    "agents/*/agent.yaml",
    "agents/*/prompt.md",
    "tools/descriptions/*.yaml",
    "workflow/templates/*.yaml",
]
